# gps-sdr-sim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  getopt.c  getopt.h  gpssim.c  gpssim.cpp  gpssim.h  vcpkg.json
CMakePresets/: Generic.json  Linux.json  Windows.json
include/: gpssim.h  gpstime.h  vec3.h
src/: gpssim.cpp  gpstime.cpp  vec3.cpp
